# drobo-dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  RESEARCH-extraction.md  RESEARCH-settings.md  app.py  main.py  pyproject.toml  tox.ini
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml
deploy/homepage/: README.md  widget.example.yaml
docs/: DROBO-5N.md
drobo/: __init__.py  alerts.py  client.py  codes.py  control.py  hardware.py  history.py  models.py  notify.py  parser.py  poller.py  rawdump.py  reference.py  storage.py  throughput.py
static/: app.js  base.css  charts.js  errors.css  errors.js  hardware.css  hardware.js  settings.css  settings.js  stats.css  stats.js  storage.css  storage.js  style.css
templates/: errors.html  hardware.html  index.html  settings.html  stats.html  storage.html
tests/: sample_5n.xml  test_alerts.py  test_codes.py  test_export.py  test_history.py  test_notify.py  test_parser.py  test_rawdump.py  test_storage.py
