[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drobo-dashboard"
version = "0.1.0"
description = "Web dashboard for Drobo 5N NAS monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "paramiko>=5.0.0",
    "python-dotenv>=1.2.2",
]

[tool.setuptools.packages.find]
include = ["drobo*"]
