[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drobo-dashboard"
version = "0.1.0"
description = "Web dashboard for Drobo 5N NAS monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "paramiko>=5.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pytest>=8.0",
    "ruff>=0.9",
    "types-paramiko>=3.5",
]

[tool.setuptools.packages.find]
include = ["drobo*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
"drobo/reference.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
files = ["drobo", "app.py", "main.py"]
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "paramiko.*"
ignore_missing_imports = true
