[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drobo-dashboard"
version = "0.1.0"
description = "Web dashboard for Drobo 5N NAS monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "paramiko>=5.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.9",
    "tox>=4.23",
    "tox-uv>=1.16",
    "ty>=0.0.57",
]

[tool.setuptools.packages.find]
include = ["drobo*"]

[tool.pytest.ini_options]
# tests/test_export.py imports the top-level app.py module (not part of the
# installed `drobo` package), which otherwise only resolves when pytest is
# invoked from the repo root — pin the root onto sys.path explicitly so the
# suite runs the same regardless of invocation directory/rootdir detection.
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
"drobo/reference.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["drobo", "app.py", "main.py"]
